--- a/README.Rmd
+++ b/README.Rmd
@@ -4,32 +4,13 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>"
-)
-```
-
-# Shinyapp_Reg.v3
+# Linear regression Shiny App
 
 <!-- badges: start -->
+[![Generic badge](https://img.shields.io/badge/Open Source-Yes-green.svg)](https://github.com/gui33627/LR_Shinyapp)
 <!-- badges: end -->
 
-The goal of Shinyapp_Reg.v3 is to ...
+The goal of this repository is to create an interactive Shiny App that can let users ... 
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub.
+## Usage
+Please run global.R
