--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ output: github_document
 [![Generic badge](https://img.shields.io/badge/Open Source-Yes-green.svg)](https://github.com/gui33627/LR_Shinyapp)
 <!-- badges: end -->
 
-The Shiny App is an interactive educational tool that includes learning and testing mode for beginning learners to learn concepts of linear regression.  
+The Shiny App is an interactive educational tool that includes learning and testing modes for beginning learners to learn concepts of linear regression.  
 
 ## Usage
 
@@ -25,4 +25,4 @@ server  | Scripts that build server
 UI | Scripts that build the UI
 global.R | Code that is run prior to launching the Shiny app
 server.R  | Main server framework
-UI.R  | Main UI framework
+ui.R  | Main UI framework
