--- a/README.Rmd
+++ b/README.Rmd
@@ -4,10 +4,9 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-# Linear regression Shiny App
+# Linear Regression Shiny App
 
 <!-- badges: start -->
-[![Generic badge](https://img.shields.io/badge/Open Source-Yes-green.svg)](https://github.com/gui33627/LR_Shinyapp)
 <!-- badges: end -->
 
 The Shiny App is an interactive educational tool that includes learning and testing modes for beginning learners to learn concepts of linear regression.  
@@ -16,7 +15,7 @@ The Shiny App is an interactive educational tool that includes learning and test
 
 Please run global.R
 
-### Folder structure
+## Folder structure
 
 File/Folder Name  | Description
 ------------- | -------------
